expand ip range

--- a/ansible/inventory/kube/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:xuEjTGh5,iv:fKfYa3UA0TMKFtmHtPgYdqZxJGpjod0TQGROzEaDsSY=,tag:SBQUz3begRXx1/u4XhPBVw==,type:str]
-ansible_user: ENC[AES256_GCM,data:DnDD/LYK,iv:HF2H8ibPzYlUP0cmDZINN9E+W2AC1LwkToAUTwZ9OnI=,tag:3cZBW6IpMjufrlF6uLWaIg==,type:str]
+kind: ENC[AES256_GCM,data:xPD+1ElK,iv:0NRdzWiAFbjP9qOCSAVDrEbTeMuIe3L/WgF7ov3NqQw=,tag:c3yNQoLp8FobE+fko7eQ3g==,type:str]
+ansible_user: ENC[AES256_GCM,data:kx9OA3U8,iv:aAXC8EfsySJoso7uNYXNnqlTQxUukA+zeW3Yki8g53s=,tag:STrujGh/RATxMDS+GwlA+Q==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUZWdxRmhaY2J4QmJkb0lX
-            bEdBTHJoTld5b1lySmZjcHBFbG1wcWtFUWhnCmtsalJtM1ZJL0hDQU9WMXlUczVU
-            ZFkrTENHVEp3UEJzbFhPa0NtQVlKNG8KLS0tIDFLMnBuamJkMlpmc1YwN1FZR1dW
-            TCtNS1Q5d3NSZURnYllhTXVxR09mcUEKIySDhTdtDI5AHjadzWud36XuFjv3PZCh
-            k6Osy8oG1tzOlnKMSPqU5kAoqgYLcsl3kbtA2st8uVyvUMUfzsPA6w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxUzNHaGZpa1pXZGZ1ZW9K
+            d3l5WnV1QW14Y1o4eW51YmtOUFM1OEc1U3d3CjNDSmtLaTI5RGpDUXFXWG1qdkZt
+            bnpPd3NKVzIvVFd1VE5ReFU3R204bVkKLS0tIDlDV1hhN1FqRjlyZFJKcy9ucXNq
+            K2o0MGNYU2JGZStHdGhiNkplSFFLbjgKEUBwSPsjIqSHtbpcRfN73B3DnLosRuC+
+            rpEgWUFtOKcMsVlYvtTEpU6VdPmvbMsErq0E0s04UesNFR4F+7H8Dg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-12T03:56:27Z"
-    mac: ENC[AES256_GCM,data:q0ZlTtOsfGr4g9L0etqu0SFMc8zkxvwHtV0WU2nCS/pdva8VE2w3QD7Bz1zsr8rPx7vuD9QVPJ7sHqWJEdXRoMiKJpx1rQnIJCGC0OGZ9awzqciJC/DKyIWix0Z5//wbmUBLlcPTE0VYsjeqgxH4cB556OeoBuKizcOl5M9miqw=,iv:44Y51M3o4Y0w0KdYx9289r1OGzGPdOAx284rx+2LQ8c=,tag:r/+JBvXyh9rVM7kjVAU+EA==,type:str]
+    lastmodified: "2023-01-12T16:13:56Z"
+    mac: ENC[AES256_GCM,data:OOQ5BTS+4LJ+G3s9a1HDJxxqhfa89t0Ul0TwF9Hm6erOWvOpa/lHnvzDEhZrNgADruLdB1TkV4VX5vgIvrGDSVMs7hY3KsGB1orD+cO19NWzMxzB1hDcU8lBwHYq3hxnwW6kM2wro6vdV8jo08JEmlP8RaVXsALZuap6eGU8TPE=,iv:W+R0zBxlLP+NHtVM7erglhg1apPzKsTPQpMcKjFB7XM=,tag:kUNrR11K+CB6Uc5Xt+0X0g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
