--- a/ansible/inventory/kube/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:9paT0NTI,iv:yIoH3KIIRQseOXtfbQUw75YsNLC3iOWztDogd0PEDdc=,tag:WBHZToah/bBn5QSIpCsBFA==,type:str]
-ansible_user: ENC[AES256_GCM,data:GNmxR8y3,iv:BTb46YjyA7Nj8f/hEiftl5oBqRdQpBTTGi2KXnG7pyc=,tag:41MtgF3GFxanTj/QIYuw6w==,type:str]
+kind: ENC[AES256_GCM,data:rx+9uFtX,iv:MdCZr8OJoDGn0MtEy+I9Ukp8lugVEOcLzRYb5HIUiTY=,tag:29lE1VVj0ZxlydLBxBD+kw==,type:str]
+ansible_user: ENC[AES256_GCM,data:xLLvyPCy,iv:aUOQLGm+TSsvVeieQOTu+zTY7pqcwYBp9ZDxGMlDTKI=,tag:azxM6Hoj+cBeiarPvu/Dig==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwS1ZEay9Zd3h5blkvUG40
-            cnBZVE1qT2U4cDBhUVg2aU5SQVhjWk1oZ0RNCmZia1p0aHBJblRGMWo2Um1IQzJN
-            ZGtrNzNyclRzQ3duZWZTeG5hc0FRQ0UKLS0tICtHTXhVYU0rY09tSHU0WWF0Wmh2
-            bG93NUcvNWsxTHZyV0VXMWxxN2cvWTQK4/lM0uxVh1Mx5VhKnRr4IjIOd9OehqVv
-            7gY1mFmoCRPy4QSMtp4LOv1Qbl4ob9Lq8a7Ak+AL0DxiDPX6+OaQWQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBobVRZeDVEaDh4T2ljbFJx
+            c3JFR3lzZXFhWVNDT0Q2QURLSFY2c2pxSWxRCnR6M0laL29XZzlOaXR4Z2Fsc0py
+            S0N2YnNtOEFYWmdaMXNnYytLbUVYSTAKLS0tIFB1MzRnZDhGekxOVkpzTlVFNGVa
+            bTZ2N0dxMWpLV3Uwa3VjK0FCWkx2WU0K+mUeLrutYAl261XaHEGgBp6AJ9fELUzz
+            SzzSvNXiVDVTDpJ40YHWWa774m+tKW58Wc2yY3o4T4ToK7wQOEmlxA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-12T03:56:27Z"
-    mac: ENC[AES256_GCM,data:U6wb4Ba8AZ0eszdw4Pv06PjRLtEGN9XNoAgoT4GdPZcug3KBUmRq3eovI0+jHtp3Bkunr289rBQUTzl7HspgOgtQ46H4LwFNaVT8VkRXwDvQTIOPdg4VHv1Xt5OAfNizDpv/x4YsLHeq5QwZqn0SbrnI1K7E948SyPzjhjpOPYE=,iv:Hr9CGRdZCAwWY0pA0PmB3r4F414og281paPLa6QMWJo=,tag:p0poDHNIzTM6rXCNZEVRIA==,type:str]
+    lastmodified: "2023-01-12T16:13:56Z"
+    mac: ENC[AES256_GCM,data:zymawkewpkX9IzeukOmpdsyc83PTbrga2Of0Vr5uk22vDsIZRvJyJKFrNhi4wZiORx6SiooHTRVR20qhXup1HUbTfpXsdtBAwlCn1Jigh28EhEgNlULUTTAGVk+C1BX+GKYSNkWjOq9+h2DvZdUNE3c+dSoAuxnSjLditz8PVVU=,iv:7Y1o9SRyd8XSXHeIxs1jabPuG0SfsucKsA7c6nE2MJY=,tag:W84JpT4afNJYoGcUbgRmkQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
