--- a/ansible/inventory/kube/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:G06yazzo,iv:XvBi5UrUaEYj8+eOFnqpEM0zCO61B4HbbslJTDS0JlA=,tag:xDYCkzxXRCpyRTB2L0iXCA==,type:str]
-ansible_user: ENC[AES256_GCM,data:P5pYQ+kn,iv:5O0eprQcVGSxb934Y2ZlT5sDLvRjE7osw67tBEPzGSo=,tag:b+lV4+858ylVK/yLQuMlPg==,type:str]
+kind: ENC[AES256_GCM,data:e6FrLKN7,iv:cglhclJTksp5G/pn381MtYORh3BdtKflMllbbIiickI=,tag:qmEMzo6KIB+TORJuneP0yw==,type:str]
+ansible_user: ENC[AES256_GCM,data:HQu4Ai7D,iv:uuO7BWVTvV4XcJJKsJUa+KWm/iO/+z1UnmKQpT13xv8=,tag:DCiqvpVCYU91+cmZK749iA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTcTY0R1NxU3NzMEpZVFRT
-            aFp0WE1CL1pycnlQY2lVTGFsMUQzdVMvaVg4CjhDZVk4TlVTZ0NpTUlLbTVuQU1a
-            dzg1WWFSeVhtSEk4RFhFNHEwRkoydXcKLS0tIGlQSGpOTHNjOHhZY1JRUGlDdTlC
-            TUxDY2doakEreGVVVWI4SVNBc1ZnL1kKNUjx51QT6VOpP4QZKz54qoMRDfD1Szhz
-            Ff8qxG0Yj1/t5bNbwzpeUvPqSHXDz2KEPiFKNTYoQc4IXIy0MC5HMw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhazBLVUY1WGc4WkRUakJm
+            TGc3SXRDQnpVRmNVSVd2d3FSSDBSSWhuV0JVCldtd1l4L3IvT05KUzkzdGI2aHFj
+            M2hYUlZtNW4xTnBqd0xIL0Jza0ZFYTQKLS0tIHRUSUFrem5FeE9teENYYzRmdDVQ
+            SGt6U0xFZmR3RGJEZHhreEhPK05obmMK9yoMZtRQYgn1Lypjot86jh7KKZKs3PKb
+            h5nV65ufgABoJIAKOrr4wXVM2aWmlifON5D0Pdgwu82CPfAcp22nkg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-12T03:56:27Z"
-    mac: ENC[AES256_GCM,data:0TtNEWlkLX7uJ1XbJJ/s/l8nC8Wu/0zC9DOt/mfwk7EgEAjKcVeDAZc6pNiMh+YdS6RALsRenfPdM6czqHCctQpUJs1ZbWCV5fC9gK4/v6U6DJOkJodZRVQ3Mu0Cr2mYg7v+EXdakOojUnXB/Dp3COeGVhUEiO8JhQbxk98t+eU=,iv:+ggCF42GFYb46YkKZDS4jCfwNKn0fY8lSwXEmv9lAqs=,tag:UGfKjoo9KT+ixIRjwzTbqg==,type:str]
+    lastmodified: "2023-01-12T16:13:56Z"
+    mac: ENC[AES256_GCM,data:kzf5hncFNHNHgQ98olQ2OBVvjgkDT9nBPjZrj5kMoVPqf8ANlX04TQXPDEwwtad/VgNS7cyVjQbljCPQImdRWwL8j6N4Fpp72NG7Dqih1XkeXkXYN1lzvqtxa85fuuejHWAX+Q0UD26ydvQ8qQ585I7csvTdiCJ7ZToirt8xu+I=,iv:/Wj0mqhc6EyxBS+2e3hrkm3lEnebax0CPszbO7MLf4E=,tag:JUAfpt/keMXzeQzOfedOBA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
