--- a/ansible/inventory/kube/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:aA75UQvu,iv:ZjuJHPCGX7a2+IRnWDuCB/D0spLJPurDf3JMZ8sfolA=,tag:sVirjRLCRceEFJJPXpKM7w==,type:str]
-ansible_user: ENC[AES256_GCM,data:y2h5G+WP,iv:uGRpeVILN9vrp3QpM+Qe1/vrGcbGs33/BYFXGJQZqdY=,tag:SksLtuUrPGuawlzdV1MveQ==,type:str]
+kind: ENC[AES256_GCM,data:1zyPJFgh,iv:SX0g/E0ywY03VBYWNpnf5VBrUsc7X4Mgy+ZKEoTxD94=,tag:LvVhCPEsBiu4mnjsszLY8Q==,type:str]
+ansible_user: ENC[AES256_GCM,data:AcDabK7T,iv:bOBhLQK7cMahENt9BSYe7lx7xtLiWoi9u0faHLPJpx0=,tag:NB4Xuq+w6OXYuQ2onjOMoA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5QkdKKzV6dCtKTW5EOEFi
-            cHhRdFNDTm5Lby90b2hYcUIrLzcyZFVPWEQwCjJyUjFEUld3cDdVd3pMaTRTOXNp
-            a3lXeS9tVU1VVjdhL2F5VVBFTXlKWVUKLS0tIG0yUXpBaHpUdUxwbXhWbHJFM1J0
-            SHBEYi92bEdIRVdqTm5DNlQwMjljdW8Kx1Vb/poMqidr+MAxj6AgHKz/oMLr4Mxz
-            nQBw+afkPSVE5IXr5KYwthOqihtORn/8BHhRnKQl2xYECi/M8ilcFQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhTnRZcmY0YU9qRnRDVFl4
+            eWRqaVdtNnZqMDdFYXBNN0NpM3NiQ0pOKzE4ClBtQjcrU3lkOGYxZ2l2c0E5YVky
+            NXpOeWpNclN1WE51ZSt3bDVDLzZLamcKLS0tIGtXdFFwNUpWanJJY2dDSmJTWjJH
+            T1BacXNVc0hvaldqTFBRbEVkay9SeVkKKHxiGIUDObB9VfoGzqtCwjlkd74fRjP3
+            9GQQHohIaZU0GEYyetzwWyIRR8XV93mxfgI826HI0jOgRoZxhlbYeg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-12T03:56:27Z"
-    mac: ENC[AES256_GCM,data:qAN14+/xvFZ2SuTHV+xTicbIQc0U+SrKKLglOXZUnRxU+o/PQJKy8SClHNO8Xrz+42V+1JWx81XBDfQ6D9HTsQFf4fBTY8O+0k6K0eRooSnnIsFl2h4aQAag8LDKUrHE7rsTIrS2awALJLZzBz5aSxVDphd8tDimMCuHcdrAfXE=,iv:KKy+H1TKveSBrLVJiT3KOEgYbTlcnAmeSoA2TOmL89w=,tag:BR9omxJR3cRsa7BOKe3jNw==,type:str]
+    lastmodified: "2023-01-12T16:13:56Z"
+    mac: ENC[AES256_GCM,data:PwJLvKYtdzFvKUWWfbGNSJw8DIEtQ5P+zHN6A1yyrPQ4oWYlUPm5SaXRrdWFnQ1KNA+2z0RVExEgGjFV9u0yS5gRWEU3Q+88WJHF4CxE/BNwAdLz2vsLjCTmMEoVnsolRFCkjZNLJEum+eTZ23EXhvPqcwgbqj3eKHXQu0hU0cA=,iv:F/g/Os2P77bkqBNRgJJ0fgPwn6UWlHioal0TLKpCOUg=,tag:GYGJA8Tu/f/bsAH6APFgnQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
