--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:odZvVQ401K09YuCPBQ/DAO/sschW,iv:KiMTgRVSGd3fWJSc6s7KKBihn73ExtB9Q3lr1XkGR8Y=,tag:Y5MCWEMGhceyhEOgMuguCQ==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:75oTQHGl/1A/UZ97tGOFPYSUe8DkOm+n9e+ptiuUN42V3NZAlA==,iv:X1VzaCRj4zNRONAxcjqQ/vRjt59cPECsQpaCOvYZIXo=,tag:3q8AUistn3cWW/+c0a+Wag==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:mJPIXFv7Yxvhjc0=,iv:sQ1Nr7JB8LymUJGU5dz9h/yuwoj7p8FXlVLOQOakNks=,tag:30VAUg1FN63XZCsBa+MC5g==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:0TlAUlxEaxBU/DEu/uLICOgdEjfe,iv:get9IJ41cIMbMQjGtUmUKfAESocdAzhwrw6A+MtTbys=,tag:LdTNPO1P/SfBYgJstXUvpw==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:/gh85/EZjAZoGhGZ2RJDCdvAbl/rkox7YlwJJaxW4Uk7xFl9GA==,iv:gSmXCyMLwT16Rz7ZhrKutl7QHXZk3a8tJn8AN2MZ0ZM=,tag:TZGPJN4uFDecCYXKhNDHSQ==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:Qkq1WH7vY5yWaBI=,iv:8ID7X9+n/3Nd9lPnB8/WjQaHMrKulhagnrXinLiZnxo=,tag:qCe/hxEkxlJre4T+elZMww==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkajlDalZSd1RlcmIyNG9U
-            RWxncFNYRGN3MURkZnI3S3RqK1lNd1R3bjNnCmdwdGIyRURYOSt3YmZlY0J2VnNn
-            UmE0b1Y2U01TTkMwbkMxMXUwVUdZOFEKLS0tIERob3lkbi9RQXl2RUxTb2pkdC9q
-            dzFUekhCcURSYUg1TDhaUlhDczJMNFEK0gfh/b57FaqtiisI13v4O+qNstxqEomU
-            4dV1gD8bEpwIjveFZ7YUCog/bcH9xzv7OfJ1wM1Ol68Duh+vt0SLdQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkNno1Y0NqcHFQL2NORlp1
+            YzhYZkZ2K2JNNGFEK1hQNkJMNlhFZ1V5ZkdzCjBlS09rS1FsK0RqMXhTeitwTEh4
+            enJKbldKUWFxTjFMM0hhcHFTTHJ1K00KLS0tIGk1emhZeUplbEJZbWNuMEp2WjM3
+            Q2QybWR6Y0tCWUhyR3B6NFFJUDVNTVEK9fSL9RC79Rn1aYjlFbHusiDh8Z77Emlo
+            Qqe1uexu3YvjmMjC4ftUaNwUMor9c1vo0K84keqg3CfAYOwGTKLp+Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-12T03:56:27Z"
-    mac: ENC[AES256_GCM,data:po4Ow88FLYCsZV4lyCjr0DMinqJO8rjuTnrKM8pZqfA8BYxbriHUBm+bCrPYnEEx9D7pgWHTlNDkzRpA570Ahhh//FnPFyfx10gOWwfCLCoqux+9zUFkmrlqMHZSVPamR6w+FsGVROdEx/ZJHX2nab3G/ZIA/Fchfxgrds6mePw=,iv:CR9gPGr0QbXjiQZCVk6NjSQrbORZyt+Xd50Boq7S5zY=,tag:BA9UgFt2kv0KBra9xYqFRA==,type:str]
+    lastmodified: "2023-01-12T16:13:56Z"
+    mac: ENC[AES256_GCM,data:iqpgy2B46yUEM+o104QF+7P4z+wU7xlFAMkABhj7DMsWOw3uuPmKPbEiCkDNgmkBbBAF31p7DFFi+U9pqGBWNst/V9KsLxc6eOzjl63XG5oD2t3dlSx/CPm1//GJdKj3cK8zyJM9WLC9SpBRdSMJfKEjJs5VrGk+6MZ2fG68SpE=,iv:tnPPbxME+k5Hwl5gmnG5R6Oy2t8qxgWLPchZZjV+uzQ=,tag:AIbh8XXZnomGhHq7MJG+BA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
