--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,25 +4,25 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:U8Xewpa5tZixPQA=,iv:iJ80aKJ2Lc0cMekPx3WBsq4U1gaZsBXVYFzBLqzQz1k=,tag:n9N89NqMl9N8hBqDj0Lu2w==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:yZb83Wewr15ol6vTpfBuQLj1TLV+,iv:nA58oKyXQ+3J0f+6EdApIc00JH1s4mchgBe+Ke9EuWA=,tag:1h8h+8LN+/iiy2VtMX/12Q==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:Yujci116jK1rejJcJ9G3qUvfmuZZyEulR25MpNRU2WM/Gk12PrMmAmquXo9q/6/QuJP3U+u0yztMpVZWVWhybv6pOIkrFmE=,iv:3H4dDWyLS/YG/YDt9X9NplhZRwlODwnCHi9kdODNba4=,tag:XptumPBI+ey+m/0kHuLYxA==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:hHDAy89rE6uiUlfx1bNf95sz6OkzFmJ26dgpIjIhuPXsWJ0=,iv:QKJAtH5ZIzkVrqX3zuYh0Aijgp7q3Zcly+e+NlGQF0k=,tag:oKBzxNsrGsFiuxnsumbLZw==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:XnxTT85wyaSc14N7IMuT60trVw==,iv:vX0ODsnLiMWCAGbFSpXwg/FRm4rZR4hRJirHWo1mIQo=,tag:kuzkkT/+zqVNQbiVIxGuvg==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:FFfmaqDQNQwSuDC5KAjb4obET1uP,iv:j42V21TVZbNMl0lE6qgF0wj79KpWtYyAWqMQQC+kfc4=,tag:AYceQAlxyvS1iJTYWsgJvQ==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:IGtoGe90Uvs=,iv:zFa//vHJmJZTMXOlI5bJi+9SFDDHjb+VO0zpv9c3Cx8=,tag:55Gip5mWdn1YTb3fp/khWQ==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:snfwoY64Lcg=,iv:JvDSCrKYVgS14yVQIiK4KmNupgbxK1l0xvq2vURk9AU=,tag:qqgOyjsofZ2b7XsJ894z7w==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:Eowqbgiz/EKN4YFKmpbPvNopBNdaEAeQel4EZSriRxZ2xDVca/XH23mwntL6oL3HQpaEqjQ7qd6WjbS1CC98Hg==,iv:HAw4qRe/c0W4mjxr5EBIrSV1eYEIXJAm2XJKzb0AGZY=,tag:fGDPZ5ICvkwOmsriqXh33A==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:S61h1TYmnzQ9pQVDRHP6NfcO2YHyT//LQ9zsrApcWBJ1UMnM9yL4xn76c2+qdffBINvS+90d29EKjt89XrL4FA==,iv:WW1jswEROOsRNzIW9pkfVxneIibG2xsIpF6P/wsw1z0=,tag:XsVUZemruJ+w7JqC+hdHkQ==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:kpFXBAtk4UCM,iv:SVoa3Qmw9sXpc1kGrBcP0Tz25986GjQTsLSmgs9DjAQ=,tag:QazRLQcx8kjj9+yg8f8PJA==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:W7KLtcGPSs/0XHEEyj7A,iv:L9u83dnLRqSXAaOunLOpB2QUFyrUb1LC3x4xKJ2DHRU=,tag:Z2UXKfrgOyDgwCt+dcBErg==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:XiO8YmAT02/pedSpFoC0Qf5zW30JoCnjpM7He+pbhA0U5csvChFWF49YCrJXuE8R1BA=,iv:UkzVGCXik7zdzv7rvlf5gVbUbkNWzuG8Lvk7ta5d2HU=,tag:KSHuqccrnJco1i6Rb+pzdg==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:sSS1QZClV2iBkpigAn0=,iv:xEIeG/qS8XoUlWRlobskbfrVw8nY/YdLxZCXz/JZxfE=,tag:nY4NutssvCXUAqvsJI6e3w==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:UFAGOGDDuhA02RLItfkZTY0uDPU=,iv:sNy7WN6v9a5sJCgZGbkZchV+0oCQsSHmJLIz1q7NHvM=,tag:b9S6NJXG/bujp11rJY7FOg==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:7V3DUfCKvAc=,iv:YuVhr8ICtwUNF27+8Q6V2Tb3Hbarh/BKWkokciEkXQk=,tag:97OjlVTjsb72tWqBuDiC9A==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:z6mmGWVAQa0y0kqw,iv:Qzmsph/sUYxBpSgXXZX8cF7uVtUW9N6y2/gOJi8ZKN8=,tag:LA72OJxsjncOEQoDldfq7Q==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:4z5wlZHLqttu,iv:2LvNC7zbzQqUYnaiu5uIG1UAmQ2UM6Pgv8XcSOuS2Fo=,tag:yCNAwZN8nxmp56v+Objy6Q==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:/ceOLKk5yx6P,iv:mQcuK+Z8RQ5zARE3ALtvMIvRCNgWtljmBCRLenU/MO8=,tag:vutsdk+UcvXX5q4b6vC8og==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:3XJWu/DxDLJVOSw=,iv:j78tSvUp7UVQcfDxafBsl8CvXcBB/QlQda7CkihipYo=,tag:mS+UdS9exhyir3Im9bA4nw==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:IM/+LqvVsWOXrJl7NfUUL5vUfMEr,iv:ZTdczbSX55vAaJIPz7uP1K7j9Qp0zVXnNJSAlBeNJlY=,tag:/QZ0GYaK5CdQgtPEZretig==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:cKirinrGsIF/2pOrY54kLAZ5YXJVaF9vT+p7tGJydL0SrVQVDOrCGwNm5gVp7geUM95Sfrfq4HkR0I11iXCx7+jyzviA36o=,iv:GsLctoOFAkyJC7jq0VeXfHq75idEFnoBOPfFLWPfcWc=,tag:keEkS5vBR4TxrELZtwLbdg==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:v9MN5IwPXMsaDDTeWssvzBiCqtup5ifjhYVYeB+bPedIA2c=,iv:x1Tk7M6zH66crzg7oK+jpBYD/n6npBg9VUpNlywP0vA=,tag:D1IFAuhAs/rn6jXAiqoywQ==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:oP6mjavUbM4JhCV5A/9Z0BgVOA==,iv:tOUwMWovo9SJerdDrPaSMHskSOs1Ud1u1Kw4aZ0OJCg=,tag:/UG9+eN/522v/hwLiHDF3w==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:hC378uwIqJYfWs4Te2omUmCfdrZa,iv:J9dZNa5tIN51rY6slA/UY4KVLcIkCmQAZkeqbg++baE=,tag:Ro9obbUoHX+XWmWtuXYNmQ==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:Q3AawopWRbw=,iv:OsH8cojL28CmKh7mEByTXsWxkFkkhWyFXkCe6lqKkGg=,tag:QQ3hOMfTYwL+W+X91fj1uQ==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:Lt1xEKureMI=,iv:g3iZPRiXo7Zib6wL9+zRtv9Efuo6ymZkr9TQLSEeT9Y=,tag:5+hr7epeeWeTtigXoxenTg==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:fcn8kil2ls6ZSqcJrw3PWc5te7/Z5CObQKiTa5UHGF36lLS39EGidU0yu1ORVnOGXpLUuGT6aTA2l9p9RXWQRA==,iv:YHxU3SJgEaRu5OYTT2bKcW0qoBt3/x4+q1O1xnu6jVE=,tag:Jgm3Ns26VNUcYzDYaA1GZg==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:bzHz0SQMYCcetaWGT1yG1i/zuzqxFpQYtmw+HOQHDLYI0BQgsUqcZAyoSM16RX5LrROib+RjEXsbGLB2IzPFzw==,iv:Ji7j9bxPIVPx69pAHujA2CvW3xily3JUNpSxed6fZug=,tag:BAVzgMlB62xhp8x0XUKl9Q==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:So3A9bwib1aJ,iv:HOtRYXE/Cp56LV95MGKLvhnOwBG7Er7FRYaBqUQ8SIU=,tag:tNtrrZjOWaIjxhIRFrTCzA==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:OQJ4Xo4cs1esT2pMMGpM,iv:R1eqzhhceqq/0QogHvkA52JuFlbg1VP7o77uG7V3J5c=,tag:9Kiy8GSXAnJUQInr/pCruw==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:POOUTxx1+KIlshUUakLe0DHxTteyhGczZc0+hBu+hsVudMsO3Cj/R0cFUsvxt7wOUj8=,iv:fNJMHeDSayFkPRyUiyHiEHlT+4TOBxeZ+njKlMOYftY=,tag:6bNi6ODSml9SHm53mx6HGQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:vQd+mmEmQ30aQn66YCo=,iv:Qvpd+8Uk5UdHz3lK3GGlPHEi1Ong+u8GdvtwvHujVos=,tag:MFnUevMwkNlG0mTqPsxl8Q==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:newTr6FfZxy45t27++JQirkD0Fc=,iv:hwj6DOJEZeVSVkQd8uJV8ecg1cLLAMEJbOkZN6zypxI=,tag:dPB5LhWdudCi3EYaNCM6JQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:ivVLtRfTBJI=,iv:8WicMybZv5TvG3tHBcouI6tTcl7owXvZT8IgFFgT+TI=,tag:LXlh8GU20yXnNoYUWqvCuw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:1UnVQJvd5sAqxxYT,iv:qgNrNaQp8UhUtRp8xpYeuZ6lGRVGkEyQj1Dg21OzGuI=,tag:CWOajOeaQ+heHvzu/zM0rQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:vkX9eSxh9Yuq,iv:8Yv0nWLbUXGR4NB7Okf6AxmN1UL8Ms6Drpl9jEcHDi0=,tag:4XUpf89+QnDrFdIaiE6+zQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:tKcv0fC1vCsY,iv:hguDAp08Ral3UQgTnQ+XTSXx/geCMxZzT2jMUpA3fPc=,tag:J8qH4+3xMgs/I4XG0bpJGg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -32,14 +32,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1ejdranFXOXRqYlFZdXZZ
-            Y2EvaWNtNW9Ld0VoYXViblUyMVNCb2Q5ZHlRCnJxZ1lxMVB6a0d0aWRVdzNpL0l0
-            K1RlUUM4aFhpc1ZMQmFlSUxZK1I2M1EKLS0tIENnVFlmazJLUTZ5dTQrWUdQVHpJ
-            RzBkcGxVVk9SQkRCZ09EeWhvOGNkNTAKjQBR4PLuCkQ1M8Mpd+Lut3w2LwHzojb0
-            AtYEplObXzywTyJ1TmiDi4tN5RwosnEd/sEfGOnbI3VnuqLQMQMkpQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwOVV2Uzc2QXlXRExVQy9s
+            dFUxclpWTUVzL1ZTTjlVdjd5SWZRWlF6WENvCmZGRCsyb1pibDhWOHVrNjNyNkFM
+            WE1GbVVEaXQzbm8rbnBpVmhEREVYTjQKLS0tIHFnZXlXMThOZGxGM0hzdERZdmho
+            VU5iQWxMTHRncmJIMEF0TGhTQ3lLOGcKQNg+51NLuuLdD8xqK5a44c160A5MqRmx
+            NjsJ8x4Ex1mVJvYB4CM9QSOpBO3ERn3ovWKjmqGsHXHyzUElbO4yDg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-12T03:56:27Z"
-    mac: ENC[AES256_GCM,data:QklSEPYQ1ll4iIPBtWV+fAjGS9u88+ylaZBSeH+yY2oopvsTApodgRqhepe5/amqgmlRXywebY880J+tAhQg5sF8Z/Z8RIuxCmNtAqTS54GF6yjHfOBAiE/TB6u0OVaj8ZGjAGJgoxSnGLRO+9Nd867x4xv0P7vIKFqQAIb+YEI=,iv:yLgLi2tybHEjdca0dqpav+BSoQv3JWGVmqHBXejx4YQ=,tag:E8NNAAM+p+NPcX8xOIlhXw==,type:str]
+    lastmodified: "2023-01-12T16:13:56Z"
+    mac: ENC[AES256_GCM,data:m94/9deKsRVyeMcRrvgHUYWC6XP/s2dGhDWKfb7LPpu6Y1MHFvgxO9HjcGXnNkXvUhkFcMIXVbisRhqppkYwHvPPX3g6cazWvM9qoU+cvNZViF3/Tvmv3k+iNtVdE8PB52pK5oe1tYGVP/AJGwA1GbvW0P70muEtMIM3VJ7/6+Q=,iv:pzOM3BuVBrVZeMHyAvcktFFL3bq4dghw6WfYksua2EM=,tag:BT7AnY6eFjOEUeEA28JI7A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
