--- a/ansible/inventory/kube/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:qmPARg3d,iv:GFf0JBe5M3LFgWdmwF7JRtwNxNn6Lx6jUDlgaNjJCs4=,tag:x2YC0jeIHP7kiSaEY5cYwQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:MekbIcTE,iv:ikYE5N/4pB8BFQ+9tZTB0bFGTQKT3rvtguNeOFIYv5Y=,tag:rCvQwmRZB+NwR4k27oYGKg==,type:str]
+kind: ENC[AES256_GCM,data:2/pd2pxo,iv:2KhGOLxZdpJldDn+lvjTwPmtE2C9LUSoGg8S90JdDP8=,tag:bz07XpiMnD3S9ZjNXJn5xg==,type:str]
+ansible_user: ENC[AES256_GCM,data:W8/TQ9b7,iv:6zBGAcpllY8X2ELVRar8kbtBIhqoDbbT2W7axUtnoA8=,tag:ULBak9gWOeVh3CAYhSoL9w==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTQVp4NkRTL0JWZzlYREZW
-            SHcySUhrWCt6UmhBK3d5U3JNRUpTaElXdVZrCnI1NTl1OGptT0JGaEdrNjZNbzc4
-            bEdhL2xwazBHRHBja0E5WlljZDBiWHcKLS0tIHRtU1N0L1lpZldWRmY2dUh0S0Vl
-            TlpHNC9lVitHaTloT1JsbGhRK0tnaTgK7OpXwEWxYx+78N2XLb6UIOs/D+Qh3ZK3
-            lfglkYTmt5wfraxDhKCiU7MLXZxsVgFWs8O1bxnl1xgvBvYPu3UEOA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMRHc5bVJiQldrS1pYbXFP
+            UjQ2VnR3MVNjQXVNYTdPT1A1dFFLUzBDaEVvClc2L2tTaVdNSXJsQ0VCbG8wb01o
+            QXJpbUdleEcrV2Q4V1lwaXNpOVk0dE0KLS0tIGY0MGtDYkNqaFh3YmRPRU1ualo2
+            VDlZU3Bsa3c2OCtjNlcrYzFydDdKYVEK9sCKo/8bpQEnwSEsoETy+snZ0ca++0kM
+            UAclKdWBGAzglQt5JAV6Qjjf5Zk2u67IZ212/kXgPNQms58RUkqJNg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-12T03:56:27Z"
-    mac: ENC[AES256_GCM,data:LwJLMC7QEIE5is+otwkZX1XH5rwHGZvQbTgL4cnebARt69F9hWDW+IO/ru2RXmuKThF5TUl06PwJkFhc9LWL7F8O7hWwBEJnsc/o9nAOubf4cegfmpxfqtnA3FH3d310uHVSAq8lOtrp34NJJ7OTTP6GldS0EidNh420Uz0hBSE=,iv:bIx+XrAcBKWddyEOWmHnXOi/Y4dB00QaZpGMYVc8LKk=,tag:AvA315vRnNWZRM3cua5y0A==,type:str]
+    lastmodified: "2023-01-12T16:13:56Z"
+    mac: ENC[AES256_GCM,data:xUn0EwFJYt4r/IOvDcdAjKUakzzjStYL8zi/5S/807uEefAbAuXvEWiq9yR9uN+mxSIDp2inObf0yRQ2zsOIr2qjdJ9/bgEg4Mt7L85z1aQyVL1T5Uxjlyb9uXvQFCn8X0nOzthF9Q9vxg5NLDM36AH65JGyNiqF2YeKfLrSgpM=,iv:W+x8yI9LMbQdVgi6aiCdlECw1DH4B74KVj766nTeGg4=,tag:QG70FG6vHFjvFxVEVLXYzg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
