--- a/kubernetes/apps/kube-system/intel-device-plugin/exporter/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/intel-device-plugin/exporter/helmrelease.yaml
@@ -30,7 +30,7 @@ spec:
       type: daemonset
     image:
       repository: ghcr.io/onedr0p/intel-gpu-exporter
-      tag: rolling@sha256:dbf6bb0be87ddd87048c38bda547fe8a1756490016488c35949d7f38ea500e24
+      tag: rolling@sha256:dbf6bb0be87ddd87048c38bda547fe8a175649001648kubectl -n system get ds8c35949d7f38ea500e24
     service:
       main:
         ports:
