--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./kube-vip/ks.yaml
   - ./intel-device-plugin/ks.yaml
   - ./metrics-server/ks.yaml
-  #- ./node-feature-discovery/ks.yaml
+  - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
   - ./nfs-subdir-external-provisioner/ks.yaml
   - ./storage/ks.yaml
