--- a/kubernetes/apps/kube-system/intel-device-plugin/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/intel-device-plugin/app/helmrelease.yaml
@@ -2,27 +2,70 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: intel-device-plugin-operator
+  name: &app intel-device-plugin
   namespace: kube-system
 spec:
   interval: 15m
   chart:
     spec:
-      chart: intel-device-plugins-operator
-      version: 0.25.1
+      chart: app-template
+      version: 1.2.1
       sourceRef:
         kind: HelmRepository
-        name: intel
+        name: bjw-s-charts
         namespace: flux-system
-  maxHistory: 3
   install:
-    crds: CreateReplace
+    createNamespace: true
     remediation:
-      retries: 3
+      retries: 5
   upgrade:
-    cleanupOnFail: true
-    crds: CreateReplace
     remediation:
-      retries: 3
-  uninstall:
-    keepHistory: false
+      retries: 5
+  values:
+    controller:
+      type: daemonset
+      strategy: RollingUpdate
+    image:
+      repository: docker.io/intel/intel-gpu-plugin
+      tag: 0.25.1
+    args:
+      - -shared-dev-num
+      - "4"
+    service:
+      main:
+        enabled: false
+    # TODO(intel-gpu-plugin): Write probes to check for something to tell if it's working
+    probes:
+      liveness:
+        enabled: false
+      readiness:
+        enabled: false
+      startup:
+        enabled: false
+    persistence:
+      devfs:
+        enabled: true
+        type: hostPath
+        hostPath: /dev/dri
+        hostPathType: Directory
+        readOnly: true
+      sysfs:
+        enabled: true
+        type: hostPath
+        hostPath: /sys/class/drm
+        hostPathType: Directory
+        readOnly: true
+      kubeletsockets:
+        enabled: true
+        type: hostPath
+        hostPathType: Directory
+        hostPath: /var/lib/kubelet/device-plugins
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+            - matchExpressions:
+                - key: feature.node.kubernetes.io/custom-intel-gpu
+                  operator: In
+                  values:
+                    - "true"
