--- a/kubernetes/apps/kube-system/intel-device-plugin/ks.yaml
+++ b/kubernetes/apps/kube-system/intel-device-plugin/ks.yaml
@@ -39,7 +39,7 @@ spec:
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      name: intel-device-plugin-gpu
+      name: intel-device-plugin
       namespace: kube-system
   interval: 30m
   retryInterval: 1m
