--- a/kubernetes/apps/media/namespace.yaml
+++ b/kubernetes/apps/media/namespace.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: monitoring
+  name: media
   labels:
     kustomize.toolkit.fluxcd.io/prune: disabled
