--- a/kubernetes/apps/kube-system/storage/app/pvc-downloads.yaml
+++ b/kubernetes/apps/kube-system/storage/app/pvc-downloads.yaml
@@ -27,7 +27,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-downloads
-  namespace: downloads
+  namespace: media
 spec:
   accessModes:
     - ReadWriteMany
