--- a/kubernetes/apps/kube-system/storage/app/pvct-tv.yaml
+++ b/kubernetes/apps/kube-system/storage/app/pvct-tv.yaml
@@ -13,7 +13,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: 192.168.1.2
-    path: "/volume1/Video/Movies"
+    path: "/volume1/Video/Tv"
     readOnly: false
   mountOptions:
     - nfsvers=4.1
