--- a/kubernetes/apps/media/sabnzbd/app/ingress.yaml
+++ b/kubernetes/apps/media/sabnzbd/app/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: sabnzbd
-  namespace: default
+  namespace: media
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     hajimari.io/enable: "true"
