--- a/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sabnzbd/app/helmrelease.yaml
@@ -86,10 +86,10 @@ spec:
     #     name: pvc-downloads
 
     persistence:
-      # downloads:
-      #   enabled: true
-      #   existingClaim: pvc-downloads
-      #   #mountPath: /downloads
+      downloads:
+        enabled: true
+        existingClaim: pvc-downloads
+        #mountPath: /downloads
       # movies:
       #   enabled: true
       #   existingClaim: pvc-movies
