--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ xanmanning.k3s*
 .terraform.tfstate*
 terraform.tfstate*
 nuc11.yml
+nuc.yml
 .monokle
 vm-start.yaml
 terraform/
+lxc-create.yml
+servers/
